src-ken&y/objects/Stock_Movement_Rule_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>maps the fields of the stock movement rules with the source document fields</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Document_Path_Putaway__c</fullName>
        <label>Source Document Path (Putaway)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Document_Path__c</fullName>
        <description>Source document path to find the field corresponding to the field on the stock movement rule object.</description>
        <label>Source Document Path (Pick)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Document__c</fullName>
        <description>API Name of the source document object.</description>
        <label>Source Document</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Movement_Rule_Field__c</fullName>
        <description>API name of the field on the stock movement rule object.</description>
        <label>Stock Movement Rule Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stock Movement Rule Settings</label>
</CustomObject>